Se agregan nuevos modulos
