# src/main/java/com/cristiansrc/resume/msresume/infrastructure/mapper/IBlogResponseMapper.java
@@ -1,5 +1,7 @@
 package com.cristiansrc.resume.msresume.infrastructure.mapper;
 
+import com.cristiansrc.resume.msresume.application.port.interactor.IS3Service;
+import org.mapstruct.Context;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.springframework.data.domain.Page;
@@ -7,7 +9,7 @@ import com.cristiansrc.resume.msresume.infrastructure.repository.jpa.entity.Blog
 import com.cristiansrc.resume.msresume.infrastructure.controller.model.BlogPageResponse;
 import com.cristiansrc.resume.msresume.infrastructure.controller.model.BlogResponse;
 
-@Mapper(componentModel = "spring")
+@Mapper(componentModel = "spring", uses = {IImageUrlMapper.class, IVideoUrlMapper.class})
 public interface IBlogResponseMapper {
 
     @Mapping(target = "content", source = "content")
@@ -20,6 +22,9 @@ public interface IBlogResponseMapper {
     @Mapping(target = "sort", source = "sort")
     @Mapping(target = "first", source = "first")
     @Mapping(target = "numberOfElements", source = "numberOfElements")
-    BlogPageResponse toPageResponse(Page<BlogEntity> page);
-    BlogResponse toResponse(BlogEntity entity);
+    BlogPageResponse toPageResponse(Page<BlogEntity> page, @Context IS3Service s3Service);
+
+    @Mapping(target = "imageUrl", source = "imageUrl")
+    @Mapping(target = "videoUrl", source = "videoUrl")
+    BlogResponse toResponse(BlogEntity entity, @Context IS3Service s3Service);
 }
