# src/main/java/com/cristiansrc/resume/msresume/infrastructure/repository/jpa/entity/BlogEntity.java
@@ -2,6 +2,8 @@ package com.cristiansrc.resume.msresume.infrastructure.repository.jpa.entity;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
 import jakarta.validation.constraints.NotNull;
 import lombok.*;
@@ -18,6 +20,10 @@ public class BlogEntity extends AuditBasicEntity {
     @Column(nullable = false)
     @NotNull
     private String title;
+
+    @Column(name = "title_eng", nullable = false)
+    @NotNull
+    private String titleEng;
 
     @Column(name = "clean_url_title", nullable = false)
     @NotNull
@@ -38,4 +44,12 @@ public class BlogEntity extends AuditBasicEntity {
     @Column(name = "description_eng", nullable = false)
     @NotNull
     private String descriptionEng;
+
+    @ManyToOne
+    @JoinColumn(name = "image_url_id")
+    private ImageUrlEntity imageUrl;
+
+    @ManyToOne
+    @JoinColumn(name = "video_url_id")
+    private VideoUrlEntity videoUrl;
 }
